# loop-unroll

./: .gitignore  Makefile  README.md
data/: loop-static-base.csv  loop-static-best.csv  loop-static-nested-base.csv  loop-static-nested-best.csv  loop-static-nested-opt.csv  loop-static-opt.csv
program/: add.c  helper.h  loop-dynamic.c  loop-static-nested.c  loop-static.c  loop.c
src/: CMakeLists.txt  LoopUnroll.cpp  LoopUnroll.h  LoopUnrollPass.cpp  LoopUnrollPass.h  loop_unroll.cpp  main.cpp
utils/: benchmark.sh  grapher.c  grapher.r
